	  tests/pokersql.xml, tests/pokersqlfail.xml: pokersql is a cgi-bin
	  script that will run SQL queries using the same database and
	  permissions as the installed poker server. It is intended as the
	  backend for a backoffice client. It is disabled by default with
	  the admin="false" attribute from the poker.server.xml
	  configuration file.

2008-12-27  Loic Dachary <loic@dachary.org>

	* ChangeLog, NEWS, conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, debian/changelog,
	  examples/poker.bot.xml, examples/poker.server-monotone.xml,
	  examples/poker.server.xml, pokerclient2d/poker2d.xml.in,
	  pokernetwork/__init__.py, tests/conf/poker.client.xml.in: bump to
	  version 1.7.4
	* AUTHORS: update proppy mail

2008-12-26  Loic Dachary <loic@dachary.org>

 	* Release 1.7.3

	* configure.ac: AC_PROG_CXX & al are only used if poker2d is
	  enabled but needs to be tested outside
	  of the conditional to prevent autoconf misbehaviour.
	  https://gna.org/support/?2197

2008-12-23  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokergameclient.py: player_list_hint member holds
	  the player_list provided by the IN_GAME packet

	* pokernetwork/pokerexplain.py, tests/test-pokerexplain.py.in:
	  IN_GAME packet carries an authoritative list of players that must
	  be set instead of the list computed by the game instance as a
	  result of the beginTurn instance. When START packet is
	  interpreted by the game instance, it first resets the wait_for
	  flag of each player to False (save the first_round value which is
	  a temporary way to exclude players that insert themselves in the
	  game while resolving the blinds). Because the wait_for flag is
	  set to False for all players, the list of player participating in
	  the game will be different from the list maintained by the
	  server. As a result POSITION packets will not designate the
	  expected players and all subsequent packets will be
	  misinterpreted.
